2008-04-29  Ben Van Mechelen  <me@benvm.be>

	* configure.ac:
	    define major, minor and micro version
	    expand GARMON_VERSION
	* garmon/__init__.py:
	* garmon/defs.py.in:
	* garmon/garmon_app.py:
	    set version from expanded variable in about dialog	    
	

2008-04-27  Ben Van Mechelen  <me@benvm.be>

	* plugins/dashboard/dashboard.py:
	    prevent the gauges from pointing beyond their range


2008-04-27  Ben Van Mechelen  <me@benvm.be>

	* garmon/obd_device.py:
	* garmon/scheduler.py:
	* plugins/dashboard/dashboard.py:
	* plugins/live_data/live_data.py:
	    Lots and lots of changes to make OBDDevice actually work :)
        
        
2008-04-26  Ben Van Mechelen  <me@benvm.be>

	* garmon/obd_device.py:
	    close method always emits the connected signal


2008-04-26  Ben Van Mechelen  <me@benvm.be>

	* garmon/garmon_app.py:
	* garmon/obd_device.py:
	* garmon/scheduler.py:
	* plugins/dashboard/dashboard.py:
	* plugins/live_data/live_data.py:
	    Reworked OBDDevice: We are now using add_io_watch.
	    We send a command to the device and just wait for the 
	    io signal. Depending on success or error we call a supplied
	    callback. Not all methods have been adjusted yet!!!.
	    

2008-04-25  Ben Van Mechelen  <me@benvm.be>

	* plugins/dashboard/dashboard.py:
	* plugins/dtc_reader/dtc_reader.py:
	    disconnect from signals on plugin deactivation
	* scripts/elm_sim.py:
	    change baudrate to 9600
	    

2008-04-23  Ben Van Mechelen  <me@benvm.be>

	* plugins/dashboard/dashboard.py:
	    new gauge type: LowGauge
	    

2008-04-21  Ben Van Mechelen  <me@benvm.be>

	* garmon/prefs.py:
	    rename Preference to _Preference 


2008-04-21  Ben Van Mechelen  <me@benvm.be>

	* garmon/garmon_app.py:
	    Specify the portname in obd_device.open() when resetting 
	* garmon/obd_device.py:
	    Add error checking in open method
	* plugins/dashboard/dashboard.py:
	    Some visual clean-ups


2008-04-21  Ben Van Mechelen  <me@benvm.be>
