@@ -1,5 +1,12 @@
 2008-04-29  Ben Van Mechelen  <me@benvm.be>
 
+	* plugins/dashboard/dashboard.py:
+	* plugins/live_data/live_data.py:
+	    call _obd_connected_cb in __init__
+	
+
+2008-04-29  Ben Van Mechelen  <me@benvm.be>
+
 	* configure.ac:
 	    define major, minor and micro version
 	    expand GARMON_VERSION
